The usage of lambda-functions as Lightweight STRATEGY